--- a/Projects/Android/AndroidManifest.xml
+++ b/Projects/Android/AndroidManifest.xml
@@ -1,44 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		package="com.drbeef.lambda1vr"
-		android:versionCode="33"
-		android:versionName="1.6.3" android:installLocation="auto" >
+	package="com.drbeef.lambda1vr"
+	android:versionCode="35"
+	android:versionName="1.7.0" android:installLocation="auto" >
 
 	<!-- Tell the system this app requires OpenGL ES 3.1. -->
-	<uses-feature android:glEsVersion="0x00030001" android:required="true"/>
+	<uses-feature android:glEsVersion="0x00030002" android:required="true"/>
+
 	<uses-feature android:name="android.hardware.vr.headtracking" android:version="1"
-				  android:required="true" />
+		android:required="true" />
+
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	
-	<application
-		android:extractNativeLibs="true"
-		android:allowBackup="false"
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+
+	<application android:allowBackup="false"
 		android:icon="@drawable/ic_lambda1vr"
 		android:label="@string/lambda1vr"
-		>
-		<!-- META QUEST -->
-		<meta-data android:name="com.samsung.android.vr.application.mode" android:value="vr_only"/>
-        <meta-data android:name="com.oculus.supportedDevices" android:value="quest|quest2"/>
+		android:extractNativeLibs="true"
+		android:requestLegacyExternalStorage="true"	>
 
+		<meta-data android:name="com.samsung.android.vr.application.mode" android:value="vr_only"/>
+
+		<!-- META QUEST -->
+		<meta-data android:name="com.oculus.supportedDevices" android:value="quest|quest2"/>
+		<!--meta-data android:name="com.oculus.ossplash" android:value="true"/-->
+		<!-- Set Dual Core mode for Quest 2/Pro -->
+		<meta-data android:name="com.oculus.dualcorecpuset" android:value="true" />
+		<!-- Enabling CPU and GPU level trading: -1 = -1 level to gpu, +1 level to cpu -->
+		<!-- CPU needs all the power it can get!! -->
+		<meta-data android:name="com.oculus.trade_cpu_for_gpu_amount" android:value="-1" />
 
 		<!-- PICO XR -->
 		<meta-data android:name="pvr.app.type" android:value="vr" />
 
 		<activity
-				android:name="com.drbeef.lambda1vr.GLES3JNIActivity"
-				android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
-				android:label="@string/lambda1vr"
-				android:launchMode="singleTask"
-				android:screenOrientation="landscape"
-				android:excludeFromRecents="true"
-				android:configChanges="screenSize|screenLayout|orientation|keyboardHidden|keyboard|navigation|uiMode">
-			<!-- Tell NativeActivity the name of the .so -->
-			<meta-data android:name="android.app.lib_name" android:value="lambda1vr" />
-			<!-- This filter lets the apk show up as a launchable icon. -->
+			android:name="com.drbeef.lambda1vr.GLES3JNIActivity"
+			android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+			android:launchMode="singleTask"
+			android:screenOrientation="landscape"
+			android:excludeFromRecents="false"
+			android:configChanges="screenSize|screenLayout|orientation|keyboardHidden|keyboard|navigation|uiMode">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
