--- a/Projects/Android/AndroidManifest.xml
+++ b/Projects/Android/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	package="com.drbeef.lambda1vr"
 	android:versionCode="35"
-	android:versionName="1.7.0" android:installLocation="auto" >
+	android:versionName="1.7.0"
+	android:installLocation="auto" >
 
 	<!-- Tell the system this app requires OpenGL ES 3.1. -->
 	<uses-feature android:glEsVersion="0x00030002" android:required="true"/>
@@ -14,15 +16,14 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+		tools:ignore="AllFilesAccessPolicy,ScopedStorage" />
 
 
 	<application android:allowBackup="false"
 		android:icon="@drawable/ic_lambda1vr"
 		android:label="@string/lambda1vr"
-		android:extractNativeLibs="true"
-		android:requestLegacyExternalStorage="true"	>
+		android:extractNativeLibs="true"	>
 
 		<meta-data android:name="com.samsung.android.vr.application.mode" android:value="vr_only"/>
 
@@ -34,17 +35,23 @@
 		<!-- Enabling CPU and GPU level trading: -1 = -1 level to gpu, +1 level to cpu -->
 		<!-- CPU needs all the power it can get!! -->
 		<meta-data android:name="com.oculus.trade_cpu_for_gpu_amount" android:value="-1" />
+		<meta-data android:name="com.oculus.vr.focusaware" android:value="true" />
 
 		<!-- PICO XR -->
 		<meta-data android:name="pvr.app.type" android:value="vr" />
 
 		<activity
+			android:exported="true"
 			android:name="com.drbeef.lambda1vr.GLES3JNIActivity"
 			android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
 			android:launchMode="singleTask"
 			android:screenOrientation="landscape"
 			android:excludeFromRecents="false"
 			android:configChanges="screenSize|screenLayout|orientation|keyboardHidden|keyboard|navigation|uiMode">
+
+			<!-- Tell NativeActivity the name of the .so -->
+			<meta-data android:name="android.app.lib_name" android:value="lambda1vr" />
+
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
